force-app/main/default/objects/Incomlend_Lead__c/Incomlend_Lead__c.object-meta.xml
<CustomObject>
    <label>Incomlend Lead (old)</label>
    <nameField>
        <label>ID LEAD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomlend Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>