force-app/main/default/objects/Incomlend_Lead__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Incomlend_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>