force-app/main/default/objects/Incomlend_Lead__c/fields/Annual_Revenue_range__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_range__c</fullName>
    <label>Annual Revenue range</label>
    <length>200</length>
    <type>Text</type>
</CustomField>