force-app/main/default/objects/Incomlend_Lead__c/fields/Benificiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Benificiary_Name__c</fullName>
    <label>Benificiary Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>