force-app/main/default/objects/Incomlend_Lead__c/fields/Broker_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Type__c</fullName>
    <label>Broker type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant / Company secretary / Tax advisory</fullName>
            </value>
            <value>
                <fullName>Bank / Online lender / factoring</fullName>
            </value>
            <value>
                <fullName>Business Association</fullName>
            </value>
            <value>
                <fullName>Corporate finance / boutique inv. banking / lawyer</fullName>
            </value>
            <value>
                <fullName>Credit insurance broker and agent</fullName>
            </value>
            <value>
                <fullName>E-procurement / sourcing / B2B e-commerce platform</fullName>
            </value>
            <value>
                <fullName>Freight forwarder</fullName>
            </value>
            <value>
                <fullName>Loan broker (offline/online, comparators)</fullName>
            </value>
            <value>
                <fullName>Marine insurance broker</fullName>
            </value>
            <value>
                <fullName>Other Introducer</fullName>
            </value>
            <value>
                <fullName>SME consulting (IT, ERP, business, FX...)</fullName>
            </value>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>Funder Agent – Financial Adviser</fullName>
            </value>
            <value>
                <fullName>Funder Agent – Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Funder Agent – Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>