force-app/main/default/objects/Incomlend_Lead__c/fields/BusinessActivity1__c.field-meta.xml
<CustomField>
    <fullName>BusinessActivity1__c</fullName>
    <label>BusinessActivity1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>