force-app/main/default/objects/Incomlend_Lead__c/fields/BusinessActivity2__c.field-meta.xml
<CustomField>
    <fullName>BusinessActivity2__c</fullName>
    <label>BusinessActivity2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>