force-app/main/default/objects/Incomlend_Lead__c/fields/Calculated_Industry__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Industry__c</fullName>
    <label>Calculated Industry</label>
    <length>200</length>
    <type>Text</type>
</CustomField>