force-app/main/default/objects/Incomlend_Lead__c/fields/calculated_source__c.field-meta.xml
<CustomField>
    <fullName>calculated_source__c</fullName>
    <formula>if (text(Source__c)=  &apos;Direct Sales - Own Network&apos;, &apos;Direct Sales - own network&apos;,
 if( isblank(marketing_tracking_ID__c) = false, &apos;Digital Marketing&apos;, text(Source__c) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>calculated source</label>
    <type>Text</type>
</CustomField>