force-app/main/default/objects/Incomlend_Lead__c/fields/Calculated_type_of_business_activity__c.field-meta.xml
<CustomField>
    <fullName>Calculated_type_of_business_activity__c</fullName>
    <label>Calculated type of business activity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>