force-app/main/default/objects/Incomlend_Lead__c/fields/CCY__c.field-meta.xml
<CustomField>
    <fullName>CCY__c</fullName>
    <label>CCY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>