force-app/main/default/objects/Incomlend_Lead__c/fields/Client_or_Investors_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Client_or_Investors_Profiles__c</fullName>
    <label>Client or Investors Profiles</label>
    <type>TextArea</type>
</CustomField>