force-app/main/default/objects/Incomlend_Lead__c/fields/contacted__c.field-meta.xml
<CustomField>
    <fullName>contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contacted</label>
    <type>Checkbox</type>
</CustomField>