force-app/main/default/objects/Incomlend_Lead__c/fields/Converted_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Incomlend_Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>