force-app/main/default/objects/Incomlend_Lead__c/fields/Country_of_Incorporation_residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation_residence__c</fullName>
    <label>Country of Incorporation / Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>