force-app/main/default/objects/Incomlend_Lead__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <label>Declined Reason</label>
    <type>TextArea</type>
</CustomField>