force-app/main/default/objects/Incomlend_Lead__c/fields/DocuSign_Compatible__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Compatible__c</fullName>
    <label>DocuSign Compatible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>