force-app/main/default/objects/Incomlend_Lead__c/fields/Eligibility_Form_Custom_Link__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Form_Custom_Link__c</fullName>
    <formula>&apos;https://forms.incomlend.com/sf.php?s=123contactform-2803298&apos; 
+ &apos;&amp;control30402219=&apos; + substitute(Company_Name__c,&apos; &apos;,&apos;%20&apos;)
+ &apos;&amp;control30402225=&apos; + substitute(email__c,&apos; &apos;,&apos;%20&apos;) 
+ &apos;&amp;control30402224-1=&apos; +  substitute(First_Name__c,&apos; &apos;,&apos;%20&apos;)  
+ &apos;&amp;control30402224-2=&apos; +  substitute(Last_Name__c,&apos; &apos;,&apos;%20&apos;)  
+ &apos;&amp;control30402223=&apos; +  substitute(website__c,&apos; &apos;,&apos;%20&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility Form Custom Link</label>
    <type>Text</type>
</CustomField>