force-app/main/default/objects/Incomlend_Lead__c/fields/full_name__c.field-meta.xml
<CustomField>
    <fullName>full_name__c</fullName>
    <formula>First_Name__c + &apos; &apos; +  Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>full name</label>
    <type>Text</type>
</CustomField>