force-app/main/default/objects/Incomlend_Lead__c/fields/Lead_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_List__c</fullName>
    <label>Lead List</label>
    <length>200</length>
    <type>Text</type>
</CustomField>