force-app/main/default/objects/Incomlend_Lead__c/fields/marketing_campaign__c.field-meta.xml
<CustomField>
    <fullName>marketing_campaign__c</fullName>
    <label>marketing campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>