force-app/main/default/objects/Incomlend_Lead__c/fields/marketing_tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>marketing_tracking_ID__c</fullName>
    <externalId>true</externalId>
    <label>marketing tracking ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>