force-app/main/default/objects/Incomlend_Lead__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <label>message</label>
    <type>TextArea</type>
</CustomField>