force-app/main/default/objects/Incomlend_Lead__c/fields/Net_Yield_Return__c.field-meta.xml
<CustomField>
    <fullName>Net_Yield_Return__c</fullName>
    <label>Net Yield Return</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>