force-app/main/default/objects/Incomlend_Lead__c/fields/new_funder_individual_custom_link__c.field-meta.xml
<CustomField>
    <fullName>new_funder_individual_custom_link__c</fullName>
    <formula>&apos;https://forms.incomlend.com/sf.php?s=123contactform-2868531&apos;
+ &apos;&amp;control31246753=&apos; + substitute(email__c ,&apos; &apos;,&apos;%20&apos;) 
+ &apos;&amp;control31246747-1=&apos; + substitute(First_Name__c ,&apos; &apos;,&apos;%20&apos;) 
+ &apos;&amp;control31246747-2=&apos; + substitute(Last_Name__c,&apos; &apos;,&apos;%20&apos;) 
+ &apos;&amp;control31246752=&apos; + substitute(phone_number__c,&apos; &apos;,&apos;%20&apos;) 
+ &apos;&amp;control31246750-6=&apos; + substitute(Country_of_Incorporation_residence__c,&apos; &apos;,&apos;%20&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New funder individual custom link</label>
    <type>Text</type>
</CustomField>