force-app/main/default/objects/Incomlend_Lead__c/fields/next_action__c.field-meta.xml
<CustomField>
    <fullName>next_action__c</fullName>
    <label>next action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Pitch</fullName>
            </value>
            <value>
                <fullName>Send offer</fullName>
            </value>
            <value>
                <fullName>Setup meeting</fullName>
            </value>
            <value>
                <fullName>Pitch offer</fullName>
            </value>
            <value>
                <fullName>Collect Buyer info</fullName>
            </value>
            <value>
                <fullName>Confirm Insurance cover</fullName>
            </value>
            <value>
                <fullName>Invite to registration</fullName>
            </value>
            <value>
                <fullName>Collect registration docs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>