force-app/main/default/objects/Incomlend_Lead__c/fields/online_contact_application__c.field-meta.xml
<CustomField>
    <fullName>online_contact_application__c</fullName>
    <label>online contact application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>skype</fullName>
            </value>
            <value>
                <fullName>whatsapp</fullName>
            </value>
            <value>
                <fullName>viber</fullName>
            </value>
            <value>
                <fullName>facebook messenger</fullName>
            </value>
            <value>
                <fullName>weechat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>