force-app/main/default/objects/Incomlend_Lead__c/fields/online_contact_username__c.field-meta.xml
<CustomField>
    <fullName>online_contact_username__c</fullName>
    <label>online contact username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>