force-app/main/default/objects/Incomlend_Lead__c/fields/Overview_of_Investment_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Overview_of_Investment_Strategy__c</fullName>
    <label>Overview of Investment Strategy</label>
    <type>TextArea</type>
</CustomField>