force-app/main/default/objects/Incomlend_Lead__c/fields/phone_number__c.field-meta.xml
<CustomField>
    <fullName>phone_number__c</fullName>
    <label>phone number</label>
    <type>Phone</type>
</CustomField>