force-app/main/default/objects/Incomlend_Lead__c/fields/Potential_Deposit_HKD__c.field-meta.xml
<CustomField>
    <fullName>Potential_Deposit_HKD__c</fullName>
    <label>Potential Deposit HKD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>