force-app/main/default/objects/Incomlend_Lead__c/fields/preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>preferred_contact_method__c</fullName>
    <label>preferred contact method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>phone call</fullName>
            </value>
            <value>
                <fullName>online phone call</fullName>
            </value>
            <value>
                <fullName>online text message</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>letter</fullName>
            </value>
            <value>
                <fullName>fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>