force-app/main/default/objects/Incomlend_Lead__c/fields/reassigned__c.field-meta.xml
<CustomField>
    <fullName>reassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>reassigned</label>
    <type>Checkbox</type>
</CustomField>