force-app/main/default/objects/Incomlend_Lead__c/fields/referral_code__c.field-meta.xml
<CustomField>
    <fullName>referral_code__c</fullName>
    <label>referral code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>