force-app/main/default/objects/Incomlend_Lead__c/fields/Reporting_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirements__c</fullName>
    <label>Reporting Requirements</label>
    <type>TextArea</type>
</CustomField>