force-app/main/default/objects/Incomlend_Lead__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>forms.incomlend.com funder individual</fullName>
            </value>
            <value>
                <fullName>forms.incomlend.com funder company</fullName>
            </value>
            <value>
                <fullName>forms.incomlend.com supplier</fullName>
            </value>
            <value>
                <fullName>Invoice Interchange</fullName>
            </value>
            <value>
                <fullName>website</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Direct Sales - own network</fullName>
            </value>
            <value>
                <fullName>Direct Sales - lead list</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Events &amp; Forums</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Callbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>