force-app/main/default/objects/Incomlend_Lead__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>*123 forms submission*</fullName>
            </value>
            <value>
                <fullName>Contacted - Never responded</fullName>
            </value>
            <value>
                <fullName>10.Not contacted</fullName>
                <default>true</default>
                <label>10.Not contacted</label>
            </value>
            <value>
                <fullName>20.Contacted - Not responded yet</fullName>
            </value>
            <value>
                <fullName>30.MQL - Responded</fullName>
            </value>
            <value>
                <fullName>40.SQL - Interested confirmed (waiting for buyers/documents)</fullName>
            </value>
            <value>
                <fullName>50.On hold - No immediate interest</fullName>
            </value>
            <value>
                <fullName>60.Converted to Account</fullName>
            </value>
            <value>
                <fullName>91.Declined</fullName>
            </value>
            <value>
                <fullName>92.Unqualified</fullName>
            </value>
            <value>
                <fullName>90.Contacted - Never Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>