force-app/main/default/objects/Incomlend_Lead__c/fields/Telemarketing_Status__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Status__c</fullName>
    <label>Telemarketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be called</fullName>
            </value>
            <value>
                <fullName>To call back</fullName>
            </value>
            <value>
                <fullName>Email requested</fullName>
            </value>
            <value>
                <fullName>Declined after 1st connected call</fullName>
            </value>
            <value>
                <fullName>Declined after email</fullName>
            </value>
            <value>
                <fullName>5 attempts – considered declined</fullName>
            </value>
            <value>
                <fullName>Successful lead – Email enquiry</fullName>
            </value>
            <value>
                <fullName>Successful lead – Meeting secured</fullName>
            </value>
            <value>
                <fullName>Successful lead – Call enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>