force-app/main/default/objects/Incomlend_Lead__c/fields/Timeframe_to_invest__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_to_invest__c</fullName>
    <label>Timeframe to invest</label>
    <type>TextArea</type>
</CustomField>