force-app/main/default/objects/Incomlend_Lead__c/fields/Trading_Corridors__c.field-meta.xml
<CustomField>
    <fullName>Trading_Corridors__c</fullName>
    <label>Trading Corridors</label>
    <type>TextArea</type>
</CustomField>