force-app/main/default/objects/Incomlend_Lead__c/fields/Type_of_business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_business__c</fullName>
    <label>Type of business</label>
    <length>200</length>
    <type>Text</type>
</CustomField>