force-app/main/default/objects/Incomlend_Lead__c/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>TextArea</type>
</CustomField>