force-app/main/default/objects/Incomlend_Lead__c/listViews/added_last_14_days.listView-meta.xml
<ListView>
    <fullName>added_last_14_days</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Source__c</columns>
    <columns>next_action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>marketing_tracking_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <label>added last 14 days</label>
</ListView>