force-app/main/default/objects/Incomlend_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Country_of_Incorporation_residence__c</columns>
    <columns>referral_code__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <columns>email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>contacted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Funder Company</value>
    </filters>
    <label>All</label>
</ListView>